--- a/.ado/templates/yarn-install.yml
+++ b/.ado/templates/yarn-install.yml
@@ -1,5 +1,8 @@
 steps:
-
+  - script: |
+      echo $(System.DefaultWorkingDirectory)
+      set
+    displayName: "Check vars"
 
   - task: Cache@2
     inputs:
