--- a/.ado/templates/yarn-install.yml
+++ b/.ado/templates/yarn-install.yml
@@ -1,6 +1,7 @@
 steps:
   - script: |
       echo $(System.DefaultWorkingDirectory)
+      echo ------------------
       set
     displayName: "Check vars"
 
