--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -599,7 +599,12 @@ jobs:
     dependsOn:
      - Setup
      - RNWUniversalPR
-    condition: ne( dependencies.Setup.outputs['checkPayload.shouldSkipPRBuild'], 'True' )
+    condition: |
+      and
+      (
+        ne( dependencies.Setup.outputs['checkPayload.shouldSkipPRBuild'], 'True' ),
+        in(dependencies.RNWUniversalPR.result, 'Succeeded', 'SucceededWithIssues', 'Skipped')
+      )
     timeoutInMinutes: 40 # how long to run the job before automatically cancelling
     cancelTimeoutInMinutes: 5 # how much time to give 'run always even if cancelled tasks' before killing them
     pool:
@@ -678,7 +683,13 @@ jobs:
       - Setup
       - RNWUniversalPR
       - RNWDesktopPR
-    condition: ne( dependencies.Setup.outputs['checkPayload.shouldSkipPRBuild'], 'True' )
+    condition: |
+      and
+      (
+        ne( dependencies.Setup.outputs['checkPayload.shouldSkipPRBuild'], 'True' ),
+        in(dependencies.RNWUniversalPR.result, 'Succeeded', 'SucceededWithIssues', 'Skipped'),
+        in(dependencies.RNWDesktopPR.result, 'Succeeded', 'SucceededWithIssues', 'Skipped')
+      )
     pool:
       vmImage: $(VmImage)
     timeoutInMinutes: 30
