Replace Custom Generator Prompt With Inquirer
We have a chunk of code to syncrhonously read "y" or "n" when prompting users to ask if we should replace their existing files. @react-native-community/cli already includes inquirer for prompting duties. Add inquirer to our deps as well and use it instead of rolling our own logic.

Note that this means moving a lot of this code to be async. This is mostly mechanical, but changes the generator boundary, meaning we need to add more fallback logic to react-native-windows init.

Haven't validated this yet, but will test against master and 0.62 before merging.

--- a/vnext/package.json
+++ b/vnext/package.json
@@ -29,6 +29,7 @@
     "envinfo": "^7.5.0",
     "fbjs": "^1.0.0",
     "glob": "^7.1.1",
+    "inquirer": "^3.0.6",
     "mustache": "^4.0.1",
     "ora": "^3.4.0",
     "prop-types": "^15.7.2",
@@ -47,6 +48,7 @@
     "@react-native-community/cli-types": "^4.10.1",
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/chalk": "^2.2.0",
+    "@types/inquirer": "^6.5.0",
     "@types/mustache": "^4.0.1",
     "@types/ora": "^3.2.0",
     "@types/react": "16.9.0",
