Enable experimental usage of Microsoft.ReactNative.Managed as a nuget package

--- a/.ado/publish.yml
+++ b/.ado/publish.yml
@@ -166,7 +166,9 @@ jobs:
         parameters:
           artifactName: ReactWindows
           layoutHeaders: eq('true', variables['LayoutHeaders'])
-          contents: Microsoft.ReactNative\**
+          contents: |
+            Microsoft.ReactNative\**
+            Microsoft.ReactNative.Managed\**
 
     # Disable for now, not sure this works on github projects anyway.
     # - task: PublishSymbols@2
