--- a/.ado/templates/prep-and-pack-nuget.yml
+++ b/.ado/templates/prep-and-pack-nuget.yml
@@ -7,7 +7,8 @@ parameters:
   microsoftRNId: 'Microsoft.ReactNative'
   slices: '("x64.Release", "x64.Debug", "x86.Release", "x86.Debug", "ARM.Release", "ARM.Debug", "ARM64.Release", "ARM64.Debug")'
   packDesktop: true
-  packMicrosoft: true
+  packMicrosoftReactNative: true
+  packMicrosoftReactNativeManaged: true
 
 steps:
   - task: DownloadBuildArtifacts@0
@@ -16,31 +17,26 @@ steps:
       artifactName: ReactWindows
       downloadPath: $(System.DefaultWorkingDirectory)
 
-  # Strip down the binaries from nuget because we may not have built all the flavours.
-  - task: PowerShell@2
-    displayName: Strip slices from Microsoft.ReactNative.nuspec
-    inputs:
-      targetType: filePath
-      filePath: $(System.DefaultWorkingDirectory)\ReactWindows\StripAdditionalPlatformsFromNuspec.ps1
-      arguments: -nuspec $(System.DefaultWorkingDirectory)/ReactWindows/Microsoft.ReactNative.nuspec -outfile $(System.DefaultWorkingDirectory)/ReactWindows/Microsoft.ReactNative.nuspec -slices ("x64.Release", "x86.Debug", "ARM.Release")
-    condition: and(succeeded(), ${{ parameters.packMicrosoft }})
+  - ${{ if eq(parameters.packDesktop, true) }}:
+    - template: prep-and-pack-single.yml
+      parameters:
+        packageId: ${{parameters.desktopId}}
+        packageVersion: ${{parameters.npmVersion}}
+        slices: ''
+        buildProperties: 'CommitId=${{parameters.publishCommitId}};nugetroot=${{parameters.nugetroot}}'
 
-  - task: NuGetCommand@2
-    displayName: 'NuGet pack Desktop'
-    inputs:
-      command: pack
-      verbosityPack: 'Detailed'
-      packagesToPack: $(System.DefaultWorkingDirectory)/ReactWindows/ReactWin32.nuspec
-      packDestination: $(System.DefaultWorkingDirectory)/NugetRootFinal
-      buildProperties: CommitId=${{parameters.publishCommitId}};version=${{parameters.npmVersion}};id=${{parameters.desktopId}};nugetroot=${{parameters.nugetroot}}
-    condition: and(succeeded(), ${{ parameters.packDesktop }})
+  - ${{ if eq(parameters.packMicrosoftReactNative, true) }}:
+    - template: prep-and-pack-single.yml
+      parameters:
+        packageId: Microsoft.ReactNative
+        packageVersion: ${{parameters.npmVersion}}
+        slices:  ${{ parameters.slices }}
+        buildProperties: CommitId=${{parameters.publishCommitId}};nugetroot=${{parameters.nugetroot}};baseconfiguration=Release;baseplatform=x64
 
-  - task: NuGetCommand@2
-    displayName: 'NuGet pack Microsoft.ReactNative'
-    inputs:
-      command: pack
-      verbosityPack: 'Detailed'
-      packagesToPack: $(System.DefaultWorkingDirectory)/ReactWindows/Microsoft.ReactNative.nuspec
-      packDestination: $(System.DefaultWorkingDirectory)/NugetRootFinal
-      buildProperties: CommitId=${{parameters.publishCommitId}};version=${{parameters.npmVersion}};id=${{parameters.microsoftRNId}};nugetroot=${{parameters.nugetroot}};baseconfiguration=Release;baseplatform=x64
-    condition: and(succeeded(), ${{ parameters.packMicrosoft }})
+  - ${{ if eq(parameters.packMicrosoftReactNativeManaged, true) }}:
+    - template: prep-and-pack-single.yml
+      parameters:
+        packageId: Microsoft.ReactNative.Managed
+        packageVersion: ${{parameters.npmVersion}}
+        slices:  ${{ parameters.slices }}
+        buildProperties: CommitId=${{parameters.publishCommitId}};nugetroot=${{parameters.nugetroot}};baseconfiguration=Release;baseplatform=x64
