--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -39,7 +39,6 @@ jobs:
         X86Debug:
           BuildConfiguration: Debug
           BuildPlatform: x86
-          TestMSRNNuget: true
           LayoutHeaders: true
         #X86Release:
         #  BuildConfiguration: Release
@@ -143,30 +142,7 @@ jobs:
           layoutHeaders: eq('true', variables['LayoutHeaders'])
           contents: |
             Microsoft.ReactNative\**
-
-      - script: |
-          npx --no-install beachball bump --branch origin/$(System.PullRequest.TargetBranch)
-        displayName: Bump package versions to align NuGet version with npm version
-        condition: eq('true', variables['TestMSRNNuget'])
-
-      - task: PowerShell@2
-        displayName: Prepare minimum NuGet for testing experimental init
-        inputs:
-          targetType: 'inline'
-          script: |
-            $pkgJson = Get-Content -Raw -Path .\vnext\package.json | ConvertFrom-Json
-            $pkgVersion = $pkgJson.version
-            $(Build.SourcesDirectory)\vnext\Scripts\StripAdditionalPlatformsFromNuspec.ps1 -slices ("$(BuildPlatform).$(BuildConfiguration)")
-            Copy-Item -Force -Path vnext\Scripts\Microsoft.ReactNative.targets -Destination $(Build.SourcesDirectory)\vnext\target
-            nuget pack $(Build.SourcesDirectory)\vnext\Scripts\Microsoft.ReactNative.PR.nuspec -NonInteractive -OutputDirectory $(Build.StagingDirectory)/TestMSRNNuget -Properties "Configuration=Release;CommitId=0;version=$pkgVersion;id=Microsoft.ReactNative;nugetroot=$(Build.StagingDirectory);baseplatform=$(BuildPlatform);baseconfiguration=$(BuildConfiguration)" -Verbosity Detailed
-        condition: eq('true', variables['TestMSRNNuget'])
-
-      - task: PublishBuildArtifacts@1
-        displayName: "Publish Artifact: TestMSRNNuget"
-        inputs:
-          artifactName: TestMSRNNuget.$(BuildPlatform).$(BuildConfiguration)
-          pathtoPublish: $(Build.StagingDirectory)/TestMSRNNuget
-        condition: eq('true', variables['TestMSRNNuget'])
+            Microsoft.ReactNative.Managed\**
 
   - job: RNW_WinUI3
     displayName: WinUI3 Playground
@@ -598,26 +574,33 @@ jobs:
     displayName: Verify react-native init experimental
     dependsOn:
      - Setup
-     - RNWUniversalPR
+     - RNWNugetPR
     condition: |
       and
       (
         ne( dependencies.Setup.outputs['checkPayload.shouldSkipPRBuild'], 'True' ),
-        in(dependencies.RNWUniversalPR.result, 'Succeeded', 'SucceededWithIssues', 'Skipped')
+        in(dependencies.RNWNugetPR.result, 'Succeeded', 'SucceededWithIssues', 'Skipped'),
+        in(dependencies.RNWUniversalPR.result, 'Succeeded', 'SucceededWithIssues', 'Skipped'),
+        in(dependencies.RNWDesktopPR.result, 'Succeeded', 'SucceededWithIssues', 'Skipped')
       )
     timeoutInMinutes: 40 # how long to run the job before automatically cancelling
     cancelTimeoutInMinutes: 5 # how much time to give 'run always even if cancelled tasks' before killing them
     pool:
       vmImage: $(VmImage)
+    strategy:
+      matrix:
+        cpp:
+          Language: cpp
+        cs:
+          Language: cs
     steps:
       - template: templates/react-native-init.yml
         parameters:
-          language: cpp
+          language: $(Language)
           configuration: Debug
           platform: x86
           version: $(reactNativeVersion)
-          additionalInitArguments: ${{ '' }}
-          experimentalNuGetDependency: true
+          useNuGet: true
 
   - job: RNWExtraChecks
     displayName: Extra Checks
@@ -720,5 +703,11 @@ jobs:
 
       - template: templates/prep-and-pack-nuget.yml
         parameters:
-          slices: '("x64.Release", "x86.Debug", "ARM.Debug")'
-          packUniversal: false
+          slices: '("x64.Release", "x86.Debug", "ARM.Release")'
+          npmVersion: $(reactNativeVersion)
+
+      - task: PublishBuildArtifacts@1
+        displayName: Upload PR NuGet Test feed
+        inputs:
+          pathtoPublish: $(System.DefaultWorkingDirectory)/NuGetTestFeed
+          artifactName: NuGetTestFeed
