--- a/vnext/local-cli/templates/shared/proj/NuGet.Config
+++ b/vnext/local-cli/templates/shared/proj/NuGet.Config
@@ -4,7 +4,10 @@
     <add key="repositoryPath" value="packages" />
   </config>
   <packageSources>
+    {{#nuGetTestFeed}}
+    <add key="NuGetTestFeed" value="{{ nuGetTestFeed }}" />
+    {{/nuGetTestFeed}}
     <add key="Nuget.org" value="https://api.nuget.org/v3/index.json" />
-    <add key="react-native" value="https://pkgs.dev.azure.com/ms/_packaging/react-native/nuget/v3/index.json" />
+    <add key="react-native" value="https://pkgs.dev.azure.com/ms/react-native/_packaging/react-native-public/nuget/v3/index.json" />
   </packageSources>
 </configuration>
