--- a/packages/react-native-platform-override/package.json
+++ b/packages/react-native-platform-override/package.json
@@ -21,8 +21,10 @@
   },
   "dependencies": {
     "chalk": "^3.0.0",
+    "globby": "^9.2.0",
     "inquirer": "^7.1.0",
     "io-ts": "^2.1.1",
+    "isutf8": "^3.0.0",
     "lodash": "^4.17.15",
     "node-fetch": "^2.6.0",
     "ora": "^4.0.3",
@@ -39,9 +41,11 @@
     "@rnw-scripts/ts-config": "0.0.1",
     "@types/chalk": "^2.2.0",
     "@types/diff-match-patch": "^1.0.32",
+    "@types/globby": "^9.1.0",
     "@types/inquirer": "^6.5.0",
     "@types/jest": "^24.9.1",
     "@types/lodash": "^4.14.149",
+    "@types/minimatch": "^3.0.3",
     "@types/node": "^13.7.4",
     "@types/node-fetch": "^2.5.7",
     "@types/ora": "^3.2.0",
@@ -53,10 +57,11 @@
     "fp-ts": "^2.5.0",
     "jest": "^24.9.0",
     "just-scripts": "^0.36.1",
+    "minimatch": "^3.0.4",
     "typescript": "^3.8.3"
   },
   "engines": {
-    "node": ">=10"
+    "node": ">=12.0.0"
   },
   "files": [
     "bin.js",
