--- a/packages/@rnw-scripts/promote-release/package.json
+++ b/packages/@rnw-scripts/promote-release/package.json
@@ -6,7 +6,8 @@
     "build": "just-scripts build",
     "clean": "just-scripts clean",
     "lint": "just-scripts lint",
-    "lint:fix": "just-scripts lint:fix"
+    "lint:fix": "just-scripts lint:fix",
+    "watch": "just-scripts watch"
   },
   "bin": {
     "promote-release": "./bin.js"
