--- a/packages/E2ETest/package.json
+++ b/packages/E2ETest/package.json
@@ -8,7 +8,7 @@
     "start": "react-native start",
     "lint": "just-scripts lint",
     "lint:fix": "just-scripts lint:fix",
-    "watch": "tsc -w",
+    "watch": "just-scripts watch",
     "windows": "react-native run-windows",
     "prettier": "prettier --write --loglevel warn \"**/**/*.ts\"",
     "e2e": "react-native run-windows --no-launch --logging && npm run e2etest",
