--- a/packages/react-native-windows-init/package.json
+++ b/packages/react-native-windows-init/package.json
@@ -10,7 +10,8 @@
     "build": "just-scripts build",
     "clean": "just-scripts clean",
     "lint": "just-scripts lint",
-    "lint:fix": "just-scripts lint:fix"
+    "lint:fix": "just-scripts lint:fix",
+    "watch": "just-scripts watch"
   },
   "bin": {
     "react-native-windows-init": "./bin.js"
