--- a/vnext/package.json
+++ b/vnext/package.json
@@ -23,22 +23,33 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.8.4",
+    "abort-controller": "^3.0.0",
+    "anser": "^1.4.9",
+    "base64-js": "^1.1.2",
     "chalk": "^3.0.0",
     "cli-spinners": "^2.2.0",
-    "create-react-class": "^15.6.3",
     "envinfo": "^7.5.0",
+    "event-target-shim": "^5.0.1",
+    "fbjs-scripts": "^1.1.0",
     "fbjs": "^1.0.0",
     "glob": "^7.1.1",
     "inquirer": "^3.0.6",
+    "invariant": "^2.2.4",
     "mustache": "^4.0.1",
-    "ora": "^3.4.0",
-    "prop-types": "^15.7.2",
     "nuget-exe": "4.9.2",
+    "nullthrows": "^1.1.1",
+    "ora": "^3.4.0",
+    "pretty-format": "^24.9.0",
+    "prop-types": "^15.7.2",
+    "react-devtools-core": "^4.0.6",
     "regenerator-runtime": "^0.13.2",
     "semver": "^7.1.3",
     "shelljs": "^0.7.8",
+    "stacktrace-parser": "^0.1.3",
+    "use-subscription": "^1.0.0",
     "username": "^5.1.0",
     "uuid": "^3.3.2",
+    "whatwg-fetch": "^3.0.0",
     "xml-parser": "^1.2.1",
     "xmldom": "^0.3.0",
     "xpath": "^0.0.27"
@@ -52,22 +63,23 @@
     "@types/inquirer": "^6.5.0",
     "@types/mustache": "^4.0.1",
     "@types/ora": "^3.2.0",
-    "@types/react": "16.9.0",
     "@types/react-native": "^0.62.10",
+    "@types/react": "16.9.0",
     "@types/shelljs": "^0.8.8",
     "@types/uuid": "^8.0.0",
     "@types/xml-parser": "^1.2.29",
     "@types/xmldom": "^0.1.29",
-    "eslint": "6.7.0",
     "eslint-plugin-prettier": "2.6.2",
+    "eslint": "6.7.0",
     "flow-bin": "^0.120.1",
     "jscodeshift": "^0.6.2",
     "just-scripts": "^0.36.1",
     "prettier": "1.17.0",
-    "react": "16.13.0",
-    "react-native": "0.0.0-56cf99a96",
     "react-native-platform-override": "^0.1.0",
     "react-native-windows-codegen": "0.0.9",
+    "react-native": "0.0.0-56cf99a96",
+    "react-refresh": "^0.4.0",
+    "react": "16.13.0",
     "typescript": "^3.8.3"
   },
   "peerDependencies": {
