--- a/packages/E2ETest/package.json
+++ b/packages/E2ETest/package.json
@@ -14,6 +14,7 @@
     "e2e": "react-native run-windows --no-launch --logging && npm run e2etest",
     "e2ebundle": "npm run bundle && react-native run-windows --no-launch --no-packager --bundle --logging && npm run e2etest",
     "e2etest": "rimraf reports/* && npm run prettier && node run_wdio.js",
+    "e2erntester": "rimraf reports/* && npm run prettier && node run_wdio.rntester.js",
     "testspec": "npm run prettier && wdio --spec",
     "bundle": "just-scripts prepareBundle && react-native bundle --platform windows --entry-file dist/app/index.js --bundle-output windows/ReactUWPTestApp/Bundle/index.windows.bundle --assets-dest windows/ReactUWPTestApp/Bundle",
     "buildapp": "react-native run-windows --no-launch --no-packager --no-deploy",
