Create nuget package for Managed CodeGen

--- a/.ado/publish.yml
+++ b/.ado/publish.yml
@@ -169,6 +169,7 @@ jobs:
           contents: |
             Microsoft.ReactNative\**
             Microsoft.ReactNative.Managed\**
+            Microsoft.ReactNative.Managed.CodeGen\**
 
     # Disable for now, not sure this works on github projects anyway.
     # - task: PublishSymbols@2
