--- a/vnext/Scripts/Microsoft.ReactNative.Managed.nuspec
+++ b/vnext/Scripts/Microsoft.ReactNative.Managed.nuspec
@@ -16,6 +16,7 @@
         <dependency id="Microsoft.UI.Xaml" version="2.3.191129002" />
         <dependency id="Microsoft.NETCore.UniversalWindowsPlatform" version="6.2.9" />
         <dependency id="Microsoft.ReactNative" version="$version$" />
+        <dependency id="Microsoft.ReactNative.Managed.CodeGen" version="$version$" />
       </group>
     </dependencies>
   </metadata>
