--- a/packages/playground/windows/playground-win32/Playground-Win32.rc
+++ b/packages/playground/windows/playground-win32/Playground-Win32.rc
@@ -55,6 +55,7 @@ BEGIN
     POPUP "&File"
     BEGIN
         MENUITEM "&Open Javascript File...\tCtrl+O", IDM_OPENJSFILE
+        MENUITEM "&New Window\tCtrl+N",         IDM_NEWWINDOW
         MENUITEM "&Refresh\tF5",                IDM_REFRESH
         MENUITEM SEPARATOR
         MENUITEM "&Settings...\tAlt+S",         IDM_SETTINGS
@@ -77,6 +78,7 @@ IDC_PLAYGROUND_WIN32 ACCELERATORS
 BEGIN
     "?",            IDM_ABOUT,              ASCII,  ALT
     "/",            IDM_ABOUT,              ASCII,  ALT
+    "N",            IDM_NEWWINDOW,          VIRTKEY, CONTROL
     "O",            IDM_OPENJSFILE,         VIRTKEY, CONTROL
     "S",            IDM_SETTINGS,           VIRTKEY, ALT
     VK_F5,          IDM_REFRESH,            VIRTKEY 
