[Desktop] Add arbitrary global flag setting functions (#5458)
* Define Set/Get FeatureGate

* clang format

* Change files

* Make GetFeatureGate return const

* Enforce calling convention

* Drop Office-rlated suffix

* Add documentation

* Update export symbols.

* Add value parameter to SetFeatureGate.

* Add locking to feature gate reading/writing

* yarn format

* Have getter use const& parameter.

--- a/vnext/Desktop/React.Windows.Desktop.vcxproj
+++ b/vnext/Desktop/React.Windows.Desktop.vcxproj
@@ -209,6 +209,7 @@
     <ClCompile Include="..\Microsoft.ReactNative\RedBox.cpp" />
     <ClCompile Include="..\Microsoft.ReactNative\TurboModulesProvider.cpp" />
     <ClCompile Include="CxxReactWin32\JSBigString.cpp" />
+    <ClCompile Include="FeatureGate.cpp" />
     <ClCompile Include="JSBigStringResourceDll.cpp" />
     <ClCompile Include="module.g.cpp" />
     <ClCompile Include="Modules\NetworkingModule.cpp" />
