--- a/vnext/Scripts/Microsoft.ReactNative.Cxx.nuspec
+++ b/vnext/Scripts/Microsoft.ReactNative.Cxx.nuspec
@@ -10,7 +10,7 @@
     <repository type="git"
       url="https://github.com/microsoft/react-native-windows.git"
       commit="$CommitId$" />
-    <tags>react react-native native-module codegen microsoft c# csharp</tags>
+    <tags>react react-native react-native-windows microsoft c cpp c++</tags>
     <dependencies>
       <group targetFramework="UAP10.0">
         <dependency id="Microsoft.ReactNative" version="$version$" />
