--- a/vnext/Scripts/Microsoft.ReactNative.Managed.nuspec
+++ b/vnext/Scripts/Microsoft.ReactNative.Managed.nuspec
@@ -10,7 +10,7 @@
     <repository type="git"
       url="https://github.com/microsoft/react-native-windows.git"
       commit="$CommitId$" />
-    <tags>react react-native native-module microsoft c# csharp</tags>
+    <tags>react react-native react-native-windows native-module microsoft c# csharp</tags>
     <dependencies>
       <group targetFramework="UAP10.0">
         <dependency id="Microsoft.UI.Xaml" version="2.3.191129002" />
