--- a/vnext/Scripts/Microsoft.ReactNative.nuspec
+++ b/vnext/Scripts/Microsoft.ReactNative.nuspec
@@ -10,7 +10,7 @@
     <repository type="git"
       url="https://github.com/microsoft/react-native-windows.git"
       commit="$CommitId$" />
-    <tags>react react-native microsoft c c++ cpp c# csharp</tags>
+    <tags>react react-native react-native-windows microsoft c c++ cpp c# csharp</tags>
   </metadata>
   <files>
 
