codesign each nuget package

--- a/.ado/templates/prep-and-pack-nuget.yml
+++ b/.ado/templates/prep-and-pack-nuget.yml
@@ -28,14 +28,6 @@ steps:
         slices: ''
         buildProperties: 'CommitId=${{parameters.publishCommitId}};nugetroot=${{parameters.nugetroot}}'
 
-  - ${{ if eq(parameters.signMicrosoft, true) }}:
-    - task: PkgESCodeSign@10
-      displayName: 'CodeSign all Microsoft.ReactNative Binaries'
-      inputs:
-        signConfigXml: $(System.DefaultWorkingDirectory)\ReactWindows\Microsoft.ReactNative.SignConfig.xml
-        inPathRoot: ${{parameters.nugetroot}}
-        outPathRoot: ${{parameters.nugetroot}}
-
   - ${{ if eq(parameters.packMicrosoftReactNative, true) }}:
     - template: prep-and-pack-single.yml
       parameters:
@@ -43,6 +35,8 @@ steps:
         packageVersion: ${{parameters.npmVersion}}
         slices:  ${{ parameters.slices }}
         buildProperties: CommitId=${{parameters.publishCommitId}};nugetroot=${{parameters.nugetroot}};baseconfiguration=Release;baseplatform=x64
+        codesignBinaries: ${{ parameters.signMicrosoft }}
+        codesignNuget: ${{ parameters.signMicrosoft }}
 
   - ${{ if eq(parameters.packMicrosoftReactNativeCxx, true) }}:
     - template: prep-and-pack-single.yml
@@ -51,6 +45,7 @@ steps:
         packageVersion: ${{parameters.npmVersion}}
         slices:  ''
         buildProperties: CommitId=${{parameters.publishCommitId}};nugetroot=${{parameters.nugetroot}};baseconfiguration=Release;baseplatform=x64
+        codesignNuget: ${{ parameters.signMicrosoft }}
 
   - ${{ if eq(parameters.packMicrosoftReactNativeManaged, true) }}:
     - template: prep-and-pack-single.yml
@@ -59,6 +54,8 @@ steps:
         packageVersion: ${{parameters.npmVersion}}
         slices:  ${{ parameters.slices }}
         buildProperties: CommitId=${{parameters.publishCommitId}};nugetroot=${{parameters.nugetroot}};baseconfiguration=Release;baseplatform=x64
+        codesignBinaries: ${{ parameters.signMicrosoft }}
+        codesignNuget: ${{ parameters.signMicrosoft }}
 
   - ${{ if eq(parameters.packMicrosoftReactNativeManagedCodeGen, true) }}:
     - template: prep-and-pack-single.yml
@@ -67,11 +64,5 @@ steps:
         packageVersion: ${{parameters.npmVersion}}
         slices: ''
         buildProperties: CommitId=${{parameters.publishCommitId}};nugetroot=${{parameters.nugetroot}};baseconfiguration=Release;baseplatform=x64
-
-  - ${{ if eq(parameters.signMicrosoft, true) }}:
-    - task: PkgESCodeSign@10
-      displayName: 'CodeSign all Microsoft.ReactNative NuGets'
-      inputs:
-        signConfigXml: $(System.DefaultWorkingDirectory)\ReactWindows\Microsoft.ReactNative.NugetSignConfig.xml
-        inPathRoot: $(System.DefaultWorkingDirectory)/NugetRootFinal
-        outPathRoot: $(System.DefaultWorkingDirectory)/NugetRootFinal
+        codesignBinaries: ${{ parameters.signMicrosoft }}
+        codesignNuget: ${{ parameters.signMicrosoft }}
