--- a/packages/@rnw-scripts/ts-config/tsconfig.json
+++ b/packages/@rnw-scripts/ts-config/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "ES2017",
     "module": "commonjs",
     "jsx": "react",
     "sourceMap": true,
